Update processTemplate method lookup (#156)
* change reflection for getting FreeMarkerLoginFormsProvider processTemplate method to descend class hierarchy.

* including 26 upgrade and some deprecation updates